--- a/style/index.css
+++ b/style/index.css
@@ -20,7 +20,9 @@ time, mark, audio, video {
 	font: inherit;
     vertical-align: baseline;
 }
-
+html{
+    font-size:62.5%; 
+  }
 /* Borders to all */
 body{
     background-image: url(https://drive.google.com/uc?id=129U_OyOvm1SXFgdkwV1QZQ8tlWKWvc7m);
@@ -28,7 +30,7 @@ body{
 
 /* Name Style */
 h1{
-    font-size: 60px;
+    font-size: 5rem;
     font-family: 'Special Elite', cursive;
 }
 
@@ -37,7 +39,7 @@ nav a{
   border-radius: 8px;
   font-weight: bold;
   letter-spacing: 1.5px;
-  font-size:25px;
+  font-size:2.5rem;
   margin:1%;
   color:white;
   background-color: gray;  
@@ -59,7 +61,7 @@ nav a:hover{
     width: 50%; 
 }
 h2{
-    font-size: 30px;
+    font-size: 3rem;
     font-family: 'Special Elite', cursive; 
 }
 .myButton a{
@@ -67,7 +69,7 @@ h2{
     border-radius: 8px;
     font-weight: bold;
     letter-spacing: 1.5px;
-    font-size:20px;
+    font-size:2rem;
     color:white;
     background-color: gray;  
     }
@@ -77,7 +79,7 @@ h2{
     text-transform: uppercase;
    }
 p{
-    font-size:20px;
+    font-size:2rem;
     line-height: 1.5;
     
 }
@@ -103,7 +105,7 @@ margin:20px;
 
 figcaption{
     text-align: center;
-    font-size: 30px;
+    font-size: 3rem;
     font-weight: bold;
 }
 
